Trying to style nested lists...failing so far.

--- a/cv/index.html
+++ b/cv/index.html
@@ -230,19 +230,20 @@ incompressible MHDi</li>
                                         <time>July 2017 – Present</time>
                                     </header>
                                     <span>Lecturer on Computational Science</span>
-                                    <!--<span>Institute for Applied Computational Science</span>-->
                                     <ul>
-                                       <li>AC297r — Computational Science and Engineering Capstone Project</li> 
-                                          <ul>
-                                             <li>Semesters taught: Spring 2019</li>
-                                          </ul>
-                                       <p>Recruited four project partners to propose real-world problems for students to solve
+                                       <li>AC297r — Computational Science and Engineering Capstone</li> 
+                                       <ul>
+                                          <li>Semesters taught: Spring 2019</li>
+                                       </ul>
+                                       <li>Recruited four project partners to propose real-world problems for students to solve
                                        Students work in teams of 3-4 members to address challenges posed by industry and academic partners
                                        Students present results at end-of-semester poster session open to partners
-                                       </p>
-                                       <li>AC290r — Extreme Computing Semesters taught: Spring 2019</li>
-                                       <p>Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing
-                                       Students use tools developed at national labs and in academia to perform large-scale simulations</p>
+                                       </li>
+                                       <li>AC290r — Extreme Computing</li>
+                                       <li> Semesters taught:  Spring 2019</li>
+                                       <li>Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing
+                                       Students use tools developed at national labs and in academia to perform large-scale simulations
+                                       </li>
                                        <li>CS207 — Systems Development for Computational Science </li>
                                        <p>Semesters taught: Fall 2017, Fall 2018
                                        Graduate computer science course on software development for computational scientists
