--- a/cv/index.html
+++ b/cv/index.html
@@ -234,28 +234,82 @@ incompressible MHDi</li>
                                        <li>AC297r — Computational Science and Engineering Capstone</li> 
                                        <ul>
                                           <li>Semesters taught: Spring 2019</li>
-                                       </ul>
-                                       <li>Recruited four project partners to propose real-world problems for students to solve
+                                          <li>Recruited four project partners to propose real-world problems for students to solve
                                        Students work in teams of 3-4 members to address challenges posed by industry and academic partners
                                        Students present results at end-of-semester poster session open to partners
-                                       </li>
+                                          </li>
+                                       </ul>
+                                       
                                        <li>AC290r — Extreme Computing</li>
-                                       <li> Semesters taught:  Spring 2019</li>
-                                       <li>Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing
-                                       Students use tools developed at national labs and in academia to perform large-scale simulations
-                                       </li>
+                                       <ul>
+                                          <li> Semesters taught:  Spring 2019</li>
+                                          <li>Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing
+                                          Students use tools developed at national labs and in academia to perform large-scale simulations
+                                          </li>
+                                       </ul>
+
                                        <li>CS207 — Systems Development for Computational Science </li>
-                                       <p>Semesters taught: Fall 2017, Fall 2018
-                                       Graduate computer science course on software development for computational scientists
-                                       45 - 90 students
-                                       Supervised and managed 3- 5 teaching fellows
-                                       </p>
+                                       <ul>
+                                          <li>Semesters taught: Fall 2017, Fall 2018, Fall 2019</li>
+                                          <li> Graduate computer science course on software development for computational scientists
+                                          <li> 45 - 90 students </li>
+                                          <li> Supervised and managed 3- 5 teaching fellows</li>
+                                       </ul>
                                        <li>CS205 — Computing Foundations for Computational Science</li>
-                                       <p>:Semesters taught: Spring 2018
-                                       Graduate course on parallel computing
-                                       45 students
-                                       Co-taught with Ignacio Llorente
-                                       </p>
+                                          <ul>
+                                             <li> Semesters taught: Spring 2018 </li>
+                                             <li> Graduate course on parallel computing </li>
+                                             <li> 45 students </li>
+                                             <li> Co-taught with Ignacio Llorente </li>
+                                          </ul>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">University of Wisconsin-Madison</p>
+                                        <time>August 2013 - January 2016</time>
+                                    </header>
+                                    <span>Postdoctoral fellow / visiting assistant professor</span>
+                                    <ul>
+                                       <li>MATH 322 - Applied Mathematical Analysis 2</li>
+                                       <ul>
+                                          <li>Semesters taught:  Fall 2014, Fall 2015</li>
+                                          <li>Undergraduate course in partial differential equations</li>
+                                          <li>19 students (Fall 2014), 24 students (Fall 2015)</li>
+                                       </ul>
+                                    </ul>
+                                    <ul>
+                                       <li>MATH 320 - Linear Algebra and Differential Equations</li>
+                                       <ul>
+                                          <li>Semesters taught:  Fall 2013, Spring 2015</li>
+                                          <li>Undergraduate course covering differential equations and linear algebra</li>
+                                          <li>185 students (Fall 2013), 250 students (Spring 2015)</li>
+                                          <li>Supervised and managed three teaching assistants</li>
+                                       </ul>
+                                    </ul>
+                                    <ul>
+                                       <li>MATH 222 - Calculus and Analytic Geometry 2</li>
+                                       <ul>
+                                          <li>Semesters taught:  Spring 2014</li>
+                                          <li>Second semester calculus</li>
+                                          <li>224 students</li>
+                                          <li>Supervised and managed five teaching assistants</li>
+                                       </ul>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Rensselaer Polytechnic Institute</p>
+                                        <time>August 2008 - May 2009</time>
+                                    </header>
+                                    <span>Teaching assistant</span>
+                                    <ul>
+                                       <li>Thermal and Fluids Engineering Laboratory</li>
+                                       <ul>
+                                          <li>Semesters taught:  Fall 2008, Spring 2009</li>
+                                          <li>Taught laboratory sections for the Thermal and Fluids Engineering Laboratory course</li>
+                                          <li>Supervised lab experiments, graded student lab reports, homework, and quizzes</li>
+                                       </ul>
                                     </ul>
                                 </li>
                             </ol>
