CV includes outreach and awards now.

--- a/cv/index.html
+++ b/cv/index.html
@@ -315,6 +315,109 @@ incompressible MHDi</li>
                             </ol>
                         </div>
 
+                        <button class="collapsible">Outreach</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">The Basics and Essentials of Version Control</p>
+                                        <time>February 1, 2019</time>
+                                    </header>
+                                    <p> Designed and delivered a tutorial for the Sustainable Horizons Institute on why to use verison control and how to use
+git effectively. </p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Harvard pi-Day Talk</p>
+                                        <time>March 14, 2018</time>
+                                    </header>
+                                    <p> Gave a short talk to Harvard staff on the significance of , why we should care, and how to have fun with it. </p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">An Introduction to Coding Best Practices</p>
+                                        <time>November 17, 2017</time>
+                                    </header>
+                                    <p> Gave an active learning tutorial for economics Ph.D. students. Topics included how to code efficiently and write
+accessible software.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Research Experience for Undergraduates</p>
+                                        <time>Summer 2015</time>
+                                    </header>
+                                    <p> Worked with a group of three undergraduates to study the swimming motion of 2D Janus particles. We performed
+long-time asymptotics and numerical simulations to determine the final swimming velocity of the particle.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Madison Math Circle</p>
+                                        <time>October 6, 2014, September 14, 2015</time>
+                                    </header>
+                                    <p> Presented the mathematics behind fluid mechanics and sound waves to middle school and high school students using
+experiments and computational methods.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Sponsor-a-Scholar Mentor</p>
+                                        <time>September 2011 - June 2013</time>
+                                    </header>
+                                    <p> Worked with underprivileged high school students who displayed academic potential.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Engineer Ambassadors Mentor</p>
+                                        <time>Sept. 2011 - Sept. 2012</time>
+                                    </header>
+                                    <p> Facilitated educational outreach work of undergraduate engineering students.</p>
+                                </li>
+                            </ol>
+                        </div>
+
+
+
+                        <button class="collapsible">Honors and Awards</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">APS Division of Fluid Dynamics Travel Grant </p>
+                                        <time>Nov. 2015</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Featured Prof.: Wisconsin Engineer Magazine </p>
+                                        <time>Spring 2015</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Honored Instructors Program </p>
+                                        <time>Spring 2015</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">USNCCM 2013 Student Poster Competition Award </p>
+                                        <time>July 2013</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">DOE Office of Science GRFP </p>
+                                        <time>Aug. 2010 - Aug. 2013</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">NSF GRF Honorable Mention </p>
+                                        <time>May 2010</time>
+                                    </header>
+                                </li>
+                            </ol>
+                        </div>
+
                     </section>
                 </section>
             </section>
