Putting special programs into CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -418,10 +418,56 @@ experiments and computational methods.</p>
                             </ol>
                         </div>
 
+                        <button class="collapsible">Special Programs</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Instructor for Online Program in Data Science</p>
+                                        <time>Spring 2018</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Instructor for Online Program in Data Science</p>
+                                        <time>Fall 2018</time>
+                                    </header>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">2018 Data Science School </p>
+                                        <time>Jan. 6 - 19, 2018</time>
+                                    </header>
+                                    <span>Universdad de Chile</span><br>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Princeton Combustion Institute Summer School</p>
+                                        <time>Jun. 19 - 24, 2016</time>
+                                    </header>
+                                    <span>Princeton, NJ</span><br>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Turbulent Flow Simulation at the Exascale</p>
+                                        <time>Aug. 4 - 5, 2015</time>
+                                    </header>
+                                    <span>Opportunities and Challenges Workshop</span><br>
+                                    <span>Sponsored by the U.S. Department of Energy Office of Advanced Scientific Computing
+Research</span><br>
+                                    <span>Autograph Mayflower Hotel, Washington, DC</span><br>
+                                </li>
+                            </ol>
+                        </div>
+
                     </section>
                 </section>
             </section>
         </section>
+
+
+
+
 
         <script>
         var coll = document.getElementsByClassName("collapsible");
