Professional service in CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -460,14 +460,62 @@ Research</span><br>
                             </ol>
                         </div>
 
+                        <button class="collapsible">Professional Service</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Journal Reviewer</p>
+                                        <time>2013 - Present</time>
+                                    </header>
+                                    <p> Reviewed papers for various journals including the Journal of Turbulence, Journal of
+Computational and Applied Mathematics, Journal of Computational Physics, and PLOS ONE </p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Session Chair at APS-DFD Meeting</p>
+                                        <time>2014, 2015</time>
+                                    </header>
+                                    <p>Chaired sessions on Rayleigh-Bénard convection and Convection and Buoyancy-Driven Flows.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Python Tutorials</p>
+                                        <time>Jun. 2015, Sept. 2015</time>
+                                    </header>
+                                    <p> Designed and delivered Python tutorials with an emphasis on scientific computing.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Graduate Research Forum Coordinator</p>
+                                        <time>Dec. 2010 - Aug. 2012</time>
+                                    </header>
+                                    <p> Organized the department’s graduate research forum. This forum provides an environment in which students can
+present recent research results in a relatively informal setting. It is also useful in showing members of the department other research avenues that are 
+taking place.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Math. Problems in Industry Workshop </p>
+                                        <time>Jun. 14-18, 2010</time>
+                                    </header>
+                                    <p> Worked on a study which sought to provide a better understanding of a viscous sheet of molten glass.</p>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Graduate Student Math. Modeling Camp </p>
+                                        <time>Jun. 7-11, 2010</time>
+                                    </header>
+                                    <p>Worked with a team of graduate and undergraduate students to determine the optimal design of a steel laying pipe.
+Gave the summary talk at the end of the camp.</p>
+                                </li>
+                            </ol>
+                        </div>
+
                     </section>
                 </section>
             </section>
         </section>
-
-
-
-
 
         <script>
         var coll = document.getElementsByClassName("collapsible");
