Including societies on left column.

--- a/cv/index.html
+++ b/cv/index.html
@@ -68,6 +68,14 @@
                         </ul>
                     </section>
                     <section class="skills">
+                        <h6>Societies</h6>
+                        <ul>
+                            <li><span>Society of Industrial and Applied Mathematics</span></li>
+                            <li><span>American Physical Society</span></li>
+                            <li><span>American Institute of Aeronautics and Astronautics</span></li>
+                        </ul>
+                    </section>
+                    <section class="skills">
                     </section>
                 </aside>
                 <section>
