Made a reversed list for publication class and included posters.

--- a/cv/index.html
+++ b/cv/index.html
@@ -520,6 +520,25 @@ Gave the summary talk at the end of the camp.</p>
                             </ol>
                         </div>
 
+
+                        <button class="collapsible">Posters</button>
+                        <div class="pubs">
+                            <ol reversed>
+                               <li> 
+                                  Calibration of a Stochastic Model Inadequacy Representation for Chemical Kinetics,D.Sondak, M.K.Lee, T.Oliver, C.Simmons, 
+R.D.Moser, Workshop on Uncertainty Quantification and Data-Driven Modeling, Austin, Texas, March 23-24, 2017
+                               </li>
+                               <li> 
+                                  Residual-Based Large Eddy Simulation Models for Magnetohydrodynamics, D.Sondak, A.Oberai, J.N.Shadid,
+12th US National Congress on Computational Mechanics, Rayleigh, North Carolina, July 22-25, 2013
+                               </li>
+                               <li>
+                                  Tokamak Plasma Equilibrium Controllability Limitations Due to Delays, D. Sondak, E. Schuster, M.L. Walker,
+49th Division of Plasma Physics (DPP) Annual Meeting of the American Physical Society (APS), Orlando, Florida, November 12-16, 2007.
+                               </li>
+                            </ol>
+                        </div>
+
                     </section>
                 </section>
             </section>
@@ -540,6 +559,7 @@ Gave the summary talk at the end of the camp.</p>
             }
           });
         }
+
         </script>
 
     </body>
