CV done!  Included pubs and invited talks.

--- a/cv/index.html
+++ b/cv/index.html
@@ -520,6 +520,147 @@ Gave the summary talk at the end of the camp.</p>
                             </ol>
                         </div>
 
+                        <button class="collapsible">Publications</button>
+                        <div class="pubs">
+                            <ol reversed>
+                               <li>
+                                  Physical Symmetries Embedded in Neural Networks, M. Mattheakis, P. Protopapas, D. Sondak, M. Di Giovanni,
+                               E. Kaxiras, arXiv:1904.08991, 2019
+                               </li>
+                               <li>
+                                  An Inadequacy Formulation for an Uncertain Flamelet Model, D.Sondak, T.Oliver, C.Simmons,
+                                  R.D.Moser, 19th AIAA Non-Deterministic Approaches Conference, 2017
+                               </li>
+                               <li>
+                                  Can phoretic particles swim in two dimensions?, D.Sondak, C.Hawley, S.Heng, R.Vinsonhaler, E.Lauga, J.-L.
+                               Thiffeault, Physical Review E, 94, 062606, 2016
+                               </li>
+                               <li>
+                                  The effect of Prandtl number on optimal scaling laws in Rayleigh-Bénard convection, D.Sondak, F.Waleffe,
+                               L.M.Smith, Journal of Fluid Mechanics, 784, 565-595, 2015
+                               </li>
+                               <li>
+                                  A new class of finite element variational multiscale turbulence models for incompressible magnetohydrodynamics,
+                               D.Sondak, J.N.Shadid, A.A.Oberai, R.P.Pawlowski, E.C.Cyr, T.M.Smith, Journal of Computational Physics,
+                               295, 596-616, 2015
+                               </li>
+                               <li>
+                                  A residual-based eddy viscosity model for the large eddy simulation of turbulent flows, A.A. Oberai, J. Liu, D.
+                               Sondak, T.J.R. Hughes, Computer Methods in Applied Mechanics and Engineering, 282, 54-70, 2014
+                               </li>
+                               <li>
+                                  LES models for incompressible magnetohydrodynamics derived from the variational multiscale formulation, D.
+                               Sondak and A.A. Oberai, Physics of Plasmas, 19(10), 102308, 2012.
+                               </li>
+                               <li>
+                                  Remediation of time-delay effects in tokamak axisymmetric control loops by optimal tuning and robust predictor
+                               augmentation, D. Sondak, R.Arastoo, E. Schuster, M.L.Walker, Fusion Engineering and Design, 86(6), 1112–1115,
+                               2011.
+                               </li>
+                               <li>
+                                  Application of the variational Germano identity to the variational multiscale formulation, A.A. Oberai and D.
+                               Sondak, International Journal for Numerical Methods in Biomedical Engineering, 27(2), 335-344, 2011.
+                               </li>
+                               <li>
+                                  Optimal Tuning of Tokamak Plasma Equilibrium Controllers in the Presence of Time Delays, E. Schuster, D.
+                               Sondak, R. Arastoo, M. L. Walker and D. A. Humphreys, Proceedings of the 3rd IEEE Multi-conference on
+                               Systems and Control, Saint Petersburg, Russia, July 8-10, 2009.
+                               </li>
+                            </ol>
+                        </div>
+
+                        <button class="collapsible">Invited Talks</button>
+                        <div class="pubs">
+                            <ol reversed>
+                               <li> 
+                                  Towards Machine Learning for Categorizing Optimal Solutions in Turbulent Convection, Center for Mathematical
+                               Sciences and Applications Fluid Dynamics Seminar, Harvard University, May 1, 2019
+                               </li>
+                               <li>
+                                  Machine Learning, Fluids, and Turbulence, D.Sondak, Institute of Mathematical Sciences Special Colloquium,
+                               Stony Brook University, April 22, 2019
+                               </li>
+                               <li>
+                                  Machine Learning for Fluid Mechanics and Turbulence Modeling, D.Sondak, 1st International Workshop on
+                               Artificial Intelligence in Complex Systems, University of Rome—Tor Vergata, March 20, 2019
+                               </li>
+                               <li>
+                                  Optimal Solutions in Turbulent Rayleigh-Bénard Convection, D.Sondak, Mathematics Department Seminar,
+                               Clarkson University, February 13, 2019
+                               </li>
+                               <li>
+                                  Explorations in Physics-Informed Deep Learning, D.Sondak, MITRE College Lecture Series, MITRE, December
+                               7, 2018
+                               </li>
+                               <li>
+                                  Fluid Mechanics with Turbulence, Reduced Models, and Machine Learning, D.Sondak, IACS Seminar Series,
+                               Harvard University, September 28, 2018
+                               </li>
+                               <li>
+                                  A class of large eddy simulation turbulence models for incompressible magnetohydrodynamics and some of its
+                               properties, D.Sondak, CSRI Seminar, Sandia National Laboratories, August 8, 2018
+                               </li>
+                               <li>
+                                  Signature of Optimal Solutions in Rayleigh-Bénard Convection, D.Sondak, Parvathi, L.M.Smith, SIAM Annual
+                               Meeting, Portland, Oregon, July, 2018
+                               </li>
+                               <li>
+                                  Physics-Based Stochastic Inadequacy Models for Chemical Kinetics, D.Sondak, T.Oliver, C.Simmons, R.D.Moser,
+                               SIAM UQ Conference, Minisymposium on uncertainty quantification and model inadequacy, Anahiem, CA,
+                               April, 2018
+                               </li>
+                               <li>
+                                  Physics-based Models for Uncertainty Quantification in Chemical Kinetics, D.Sondak, Center for Mathematical
+                               Modeling Seminar, Universidad de Chilé, January 15, 2018
+                               </li>
+                               <li>
+                                  Residual Based Large Eddy Simulation Turbulence Models for Incompressible Magnetohydrodynamics: Part II,
+                               D.Sondak, Institute for Fusion Studies, University of Texas at Austin, May 11, 2017
+                               </li>
+                               <li>
+                                  A Story on Model Inadequacy Formulations for Chemical Kinetics, D.Sondak, T.A. Oliver, C.Simmons,
+                               R.D.Moser, Seminar in the Department of Mechanical Engineering, Oregon State Univeristy, April 28, 2017
+                               </li>
+                               <li>
+                                  Residual-Based Large Eddy Simulation Turbulence Models for Incompressible Magnetohydrodynamics, D.Sondak,
+                               J.N.Shadid, A.A.Oberai, 19th International Conference on Finite Elements in Flow Problems, Minisymposium
+                               on Stabilized, Multiscale, and Isogeometric Methods in CFD, April 7, 2017
+                               </li>
+                               <li>
+                                  Calibration of a Stochastic Operator-Based Model Inadequacy Representation for Chemical Kinetics, D.Sondak,
+                               T.A.Oliver, C.Simmons, R.D.Moser, SIAM Numerical Combustion 17, Minisymposium on uncertainty quantification
+                               and model inadequacy in combustion simulations, April 3, 2017
+                               </li>
+                               <li>
+                                  Residual Based Large Eddy Simulation Turbulence Models for Incompressible Magnetohydrodynamics: Part 1,
+                               D.Sondak, Institute for Fusion Studies, University of Texas at Austin, March 16, 2017
+                               </li>
+                               <li>
+                                  Optimal Heat Transport and Exact Coherent States in Rayleigh-Bénard Convection, D.Sondak, F.Waleffe,
+                               L.M.Smith, Center for Plasma Theory and Computation Seminar, University ofWisconsin, Madison, December
+                               14, 2015
+                               </li>
+                               <li>
+                                  Scaling Laws in Coherent Rayleigh-Bénard Convection and the Effect of the PrandtlNumber, D.Sondak, F.Waleffe,
+                               L.M.Smith, RTG Workshop on Turbulent and Coherent Convection, University of Wisconsin-Madison, May
+                               29, 2015
+                               </li>
+                               <li>
+                                  A Class of Finite ElementVariational Multiscale Turbulence Models forMHD, D.Sondak, J.N.Shadid, A.A.Oberai,
+                               R.P.Pawlowski, E.C.Cyr, T.M.Smith, Seminar at the Department of Aerospace Engineering Sciences, University
+                               of Colorado-Boulder, January 14, 2015
+                               </li>
+                               <li>
+                                   MHD SGS Turbulence Models Derived from VMS Formulations, D.Sondak, A.Oberai, J.Shadid, T.Smith,
+                               E.Cyr, R.Pawlowski, Workshop on Large Eddy Simulations of MHD Turbulence, NCAR, Boulder, Colorado,
+                               May 20-23, 2013
+                               </li>
+                               <li>
+                                  Residual-based LES Models for Magnetohydrodynamics, D.Sondak, A.Oberai, Center for Plasma Theory and
+                               Computation Seminar, University of Wisconsin, Madison, February 4, 2013
+                               </li>
+                            </ol>
+                        </div>
 
                         <button class="collapsible">Posters</button>
                         <div class="pubs">
@@ -538,6 +679,7 @@ R.D.Moser, Workshop on Uncertainty Quantification and Data-Driven Modeling, Aust
                                </li>
                             </ol>
                         </div>
+
 
                     </section>
                 </section>
