Cleaning up CV page style.

--- a/cv/index.html
+++ b/cv/index.html
@@ -20,9 +20,17 @@
         <link rel="stylesheet" type="text/css" href="../css/styles.css" />
         <link rel="stylesheet" type="text/css" href="../css/typography.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/screen.css" />
-        <title>HTML Resume Template</title>
+        <title>CV</title>
     </head>
-    <body class="letter">
+    <body>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/research">Research</a></li>
+          <li><a href="/publications">Publications</a></li>
+          <li><a href="/cv">CV</a></li>
+        </ul>
+      </nav>
         <section id="save">
             <section class="sheet">
                 <aside>
