--- a/cv/index.html
+++ b/cv/index.html
@@ -35,7 +35,7 @@
             <section class="sheet">
                 <aside>
                     <section class="contact">
-                        <h6>Contact</h6>
+                        <h4>Contact</h4>
                         <ul>
                             <li>
                                 <p><i class="fa fa-map-marker-alt" title="Location"></i> Boston, MA</p>
@@ -52,7 +52,7 @@
                         </ul>
                     </section>
                     <section class="skills">
-                        <h6>Research Interests</h6>
+                        <h4>Research Interests</h4>
                         <ul>
                             <li><span>Physics-based machine learning</span></li>
                             <li><span>Fluid mechanics</span></li>
@@ -63,7 +63,7 @@
                         </ul>
                     </section>
                     <section class="skills">
-                        <h6>Software</h6>
+                        <h4>Software</h4>
                         <ul>
                             <li><span>Python</span></li>
                             <li><span>Git</span></li>
@@ -76,7 +76,7 @@
                         </ul>
                     </section>
                     <section class="skills">
-                        <h6>Societies</h6>
+                        <h4>Societies</h4>
                         <ul>
                             <li><span>Society of Industrial and Applied Mathematics</span></li>
                             <li><span>American Physical Society</span></li>
@@ -91,7 +91,7 @@
                         <a href="https://dsondak.github.io">
                             <svg width="513px" height="35px" viewBox="0 0 1025 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
-font-family="Montserrat-Regular, Montserrat" font-size="64" font-weight="normal">
+font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                                     <g id="Letter" transform="translate(-54.000000, -140.000000)" fill="#484848">
                                         <text id="David-Sondak">
                                             <tspan x="74.728" y="174">DAVID SONDAK</tspan>
@@ -100,7 +100,6 @@ font-family="Montserrat-Regular, Montserrat" font-size="64" font-weight="normal"
                                 </g>
                             </svg>
                         </a>
-                        <hr />
                     </header>
                     <section>
 
