--- a/cv/index.html
+++ b/cv/index.html
@@ -88,8 +88,8 @@
                 </aside>
                 <section>
                     <header class="name" aria-label="David Sondak">
-                        <a href="https://dsondak.github.io">
-                            <svg width="513px" height="35px" viewBox="0 0 1025 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <a href="https://dsondak.github.io" style="display:inline-block";>
+                            <svg width="513px" height="35px" viewBox="0 0 725 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
 font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                                     <g id="Letter" transform="translate(-54.000000, -140.000000)" fill="#484848">
@@ -100,8 +100,10 @@ font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                                 </g>
                             </svg>
                         </a>
+                        <a href="sondak_cv.pdf" style="display:inline-block";>
+                                <button class="cvbutton"> Download CV </button>
+                        </a>
                     </header>
-                    <section>
 
                         <button class="collapsible">Education</button>
                         <div class="content">
