Changing some fonts in CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54=" crossorigin="anonymous" />
         <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
         <!-- Custom Styles -->
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
         <link rel="stylesheet" type="text/css" href="../css/paper.css" />
         <link rel="stylesheet" type="text/css" href="../css/styles.css" />
         <link rel="stylesheet" type="text/css" href="../css/typography.css" />
@@ -38,7 +39,7 @@
                         <h4>Contact</h4>
                         <ul>
                             <li>
-                                <p><i class="fa fa-map-marker-alt" title="Location"></i> Boston, MA</p>
+                                <p><i class="fa fa-map-marker-alt" title="Location"></i> <a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></p>
                             </li>
                             <li>
                                 <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak@gmail.com</a></p>
