Tweaks to fonts.  Need to propagate it throughout.

--- a/cv/index.html
+++ b/cv/index.html
@@ -42,7 +42,8 @@
                                 <p><i class="fa fa-map-marker-alt" title="Location"></i> <a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></p>
                             </li>
                             <li>
-                                <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak@gmail.com</a></p>
+                                <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak
+(at) gmail.com</a></p>
                             </li>
                             <li>
                                 <p><i class="fa fa-globe-americas" title="Website"></i> <a href="https://dsondak.github.io">dsondak.github.io</a></p>
@@ -106,7 +107,7 @@ font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                         </a>
                     </header>
 
-                        <button class="collapsible">Education</button>
+                        <button class="collapsible"><p>Education</p></button>
                         <div class="content">
                             <ol>
                                 <li>
