Fixed footer for desktop and mobile.

--- a/cv/index.html
+++ b/cv/index.html
@@ -39,17 +39,20 @@
                         <h4>Contact</h4>
                         <ul>
                             <li>
-                                <p><i class="fa fa-map-marker-alt" title="Location"></i> <a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></p>
+                                <span><i class="fa fa-map-marker-alt" title="Location"></i> <a
+href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></span>
                             </li>
                             <li>
-                                <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak
-(at) gmail.com</a></p>
+                                <span><i class="fa fa-envelope" title="Email"></i> <a href="mailto:dsondak@gmail.com">dsondak
+(at) gmail.com</a></span>
                             </li>
                             <li>
-                                <p><i class="fa fa-globe-americas" title="Website"></i> <a href="https://dsondak.github.io">dsondak.github.io</a></p>
+                                <span><i class="fa fa-globe-americas" title="Website"></i> <a
+href="https://dsondak.github.io">dsondak.github.io</a></span>
                             </li>
                             <li>
-                                <p><i class="fab fa-github" title="GitHub"></i> <a href="https://github.com/dsondak">github.com/dsondak</a></p>
+                                <span><i class="fab fa-github" title="GitHub"></i> <a
+href="https://github.com/dsondak">github.com/dsondak</a></span>
                             </li>
                         </ul>
                     </section>
@@ -107,7 +110,7 @@ font-family="MHelvetica, Arial, Sans-Serif" font-size="64" font-weight="normal">
                         </a>
                     </header>
 
-                        <button class="collapsible"><p>Education</p></button>
+                        <button class="collapsible">Education</button>
                         <div class="content">
                             <ol>
                                 <li>
