Put footer on CV page.

--- a/cv/index.html
+++ b/cv/index.html
@@ -718,6 +718,15 @@ R.D.Moser, Workshop on Uncertainty Quantification and Data-Driven Modeling, Aust
 
         </script>
 
+    <footer>
+    <ul>
+      <li><i class="fa fa-envelope" title="Email"></i><a href="mailto:dsondak@seas.harvard.edu">dsondak (at) seas.harvard.edu</a></li>
+      <li><i class="fab fa-github" title="GitHub"></i></i><a href="https://github.com/dsondak">github.com/dsondak</a></li>
+      <li><i class="ai ai-google-scholar"></i><a href="https://scholar.google.com/citations?user=ZYhKK1wAAAAJ&hl=en">google scholar</a></li>
+      <li><i class="fa fa-map-marker-alt" title="Location"></i><a href="https://goo.gl/maps/RYDWryHmctRp1RQ6A">Maxwell-Dworkin G111</a></li>
+    </ul>
+    </footer>
+
     </body>
     <!-- Developed by Tom Barrasso. https://barrasso.me -->
 </html>
